# CloudFoundryTest

./: .gitignore  README.md
vagrant/: Vagrantfile
vagrant/BoxSetup/: setup.sh
vagrant/BoxSetup/dev-dependencies/: catch2-2.1.1.sh  curl-7.58.0.sh  poco-1.8.1.sh  trompeloeil-29.sh
workspace/TimeZoneService/: CMakeLists.txt  TimeZoneService.cpp  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt
workspace/TimeZoneService/include/: TimeZoneService.h
workspace/TimeZoneService/include/service/: ConversionParameters.h  HandlerFactory.h  TimeZoneConversionHandler.h  TimeZoneListHandler.h  TimeZoneValidationHandler.h
workspace/TimeZoneService/service/: ConversionParameters.cpp  HandlerFactory.cpp  TimeZoneConversionHandler.cpp  TimeZoneListHandler.cpp  TimeZoneValidationHandler.cpp
workspace/TimeZoneService/test/service/: ConversionParameterDayTests.cpp  ConversionParameterHourTests.cpp  ConversionParameterMinuteTests.cpp  ConversionParameterMonthTests.cpp  ConversionParameterTests.cpp  ConversionParameterYearTests.cpp  TimeZoneConversionHandlerTest.cpp  TimeZoneServiceTest.cpp
